finished up practice

--- a/ToDoList/Views/Home/FavoritePhotos.cshtml
+++ b/ToDoList/Views/Home/FavoritePhotos.cshtml
@@ -7,9 +7,9 @@
     <body>
       <h1>Favorite Traveling Photos</h1>
       <ul>
-        <li><img src='~/img/photo1.jpg'/></li>
-        <li><img src='~/img/photo2.jpg'/></li>
-        <li><img src='~/img/photo3.jpg'/></li>
+        <li><img src='~/img/photo1.jfif'/></li>
+        <li><img src='~/img/photo2.jfif'/></li>
+        <li><img src='~/img/photo3.jfif'/></li>
       </ul>
     </body>
   </html>
